testsuite/gnatprove/tests/U315-007__vol_rel/test.out
test.ads:5:04: error: relaxed initialization on overlaid objects is not yet supported
test.ads:8:04: error: relaxed initialization on overlaid objects is not yet supported
gnatprove: error during flow analysis and proof
